service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service

spec:
  selector:
    app: flask

  ports:
  - port: 80
    targetPort: 5000

  type: NodePort
